# nixbuild

./: .gitignore  .tmuxp.yaml  AGENTS.md  CONCEPT.md  README.md  devenv.nix  flake.nix
nix/: mk-cli-vm-test.nix
src/: pyproject.toml
src/nixos_rebuild_tester/: __init__.py  application.py  cli.py  container.py  models.py  nixbuild.py  runner.py
src/nixos_rebuild_tester/adapters/: __init__.py  filesystem.py  terminal.py  terminal_backend.py  terminal_state_session.py
src/nixos_rebuild_tester/adapters/exporters/: __init__.py  asciinema.py  gif.py  log.py  screenshot.py
src/nixos_rebuild_tester/adapters/persistence/: __init__.py  filesystem_repository.py
src/nixos_rebuild_tester/domain/: __init__.py  error_detector.py  exceptions.py  models.py  neovim_models.py  protocols.py  value_objects.py
src/nixos_rebuild_tester/domain/services/: __init__.py  error_detector.py
src/nixos_rebuild_tester/infrastructure/: __init__.py  container.py
src/nixos_rebuild_tester/services/: __init__.py  build_cleaner.py  command_runner.py  directory_manager.py  executor.py  export_pipeline.py  exporter.py  exporter_registry.py  frame_recorder.py  history.py  interactive_test_runner.py  metadata.py  neovim_runner.py  nix_rebuild_runner.py  rebuild_executor.py  session_manager.py
src/nixos_rebuild_tester/services/execution/: __init__.py  command_runner.py  rebuild_executor.py
src/nixos_rebuild_tester/services/export/: __init__.py  pipeline.py
src/nixos_rebuild_tester/services/storage/: __init__.py  build_cleaner.py  retention_policy.py
tests/: test_cli.py  test_models.py  (+4 more)
