[project]
name = "nixos-rebuild-tester"
version = "0.2.0"
description = "Minimal NixOS rebuild testing with terminal recording"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
nixos-rebuild-test = "nixos_rebuild_tester.nixbuild:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
